# shrutra

./: Cargo.toml  LICENSE  README.jp.md  README.md  config.toml  shrutra.code-workspace
i18n/cli/: en.json  ja.json
i18n/gui/: en.json  ja.json
src/: main.rs  shepatra.rs
